--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,intellij
 
 ### Go ###
-# If you prefer the allow list template instead of the deny list, see community template:
+# If you prefer the allow namespaces template instead of the deny namespaces, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
